# skypulse

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  README.md  pyproject.toml
backend/src/skypulse/: main.py
backend/src/skypulse/agent/: __init__.py  agent.py
backend/src/skypulse/api/: __init__.py
backend/src/skypulse/api/routes/: __init__.py  agent.py
backend/src/skypulse/core/: __init__.py  config.py
backend/src/skypulse/models/: __init__.py  schemas.py
backend/src/skypulse/services/: __init__.py  ip_service.py  qweather_service.py
backend/src/skypulse/utils/: __init__.py  helpers.py  location_cache.py
backend/src/weather_agent/: __init__.py  cli.py  main.py
backend/src/weather_agent/agent/: __init__.py  weather_agent.py
backend/src/weather_agent/api/: __init__.py
backend/src/weather_agent/api/routes/: __init__.py  agent.py
backend/src/weather_agent/core/: __init__.py  prompts.py
backend/src/weather_agent/models/: __init__.py
backend/src/weather_agent/services/: __init__.py  qweather_service.py
backend/src/weather_agent/utils/: __init__.py
frontend/: .env.example  .env.production  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInput.tsx  ChatWindow.tsx  Header.tsx  MessageBubble.tsx  WeatherCard.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/services/: api.ts
frontend/src/store/: useChatStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: formatters.ts
