[project]
name = "weather_agent"
version = "0.1.0"
description = "智能天气机器人 - 基于 AI Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.4",
    "uvicorn>=0.30.0",
    "langchain>=1.2.9",
    "langchain-openai>=1.1.7",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
weather-bot = "weather_agent.main:main"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_agent"]
