[project]
name = "skypulse"
version = "0.1.0"
description = "ðŸŒªï¸ SkyPulse - æ™ºèƒ½å¤©æ°”æœºå™¨äººï¼ŒåŸºäºŽ AI Agent çš„å¤©æ°”æŸ¥è¯¢åº”ç”¨"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.4",
    "uvicorn>=0.30.0",
    "langchain>=1.2.9",
    "langchain-openai>=1.1.7",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
skypulse = "skypulse.main:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# å¼€å¯å“ªäº›æ£€æŸ¥è§„åˆ™
# E: pycodestyle (åŸºç¡€é£Žæ ¼)
# F: Pyflakes (é”™è¯¯æ£€æŸ¥)
# I: isort (å¯¼åŒ…æŽ’åº)
select = ["E", "F", "I"]

[tool.ruff.format]
# ç±»ä¼¼ gofmt çš„è®¾ç½®
quote-style = "double" # å¼ºåˆ¶åŒå¼•å·ï¼Œæˆ–è€…é€‰ "single"
indent-style = "space"

[tool.black]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skypulse"]
